--- a/apps/hub/.env.development
+++ b/apps/hub/.env.development
@@ -17,5 +17,5 @@
 
 
 NEXT_PUBLIC_WALLETCONNECT_PROJECT_ID=""
-NEXT_PUBLIC_STATUS_NETWORK_API_URL=""
-NEXT_PUBLIC_STATUS_API_URL=""
+NEXT_PUBLIC_STATUS_NETWORK_API_URL="https://api.status.network/api/v1"
+NEXT_PUBLIC_STATUS_API_URL="http://localhost:3030"
