--- a/apps/hub/package.json
+++ b/apps/hub/package.json
@@ -29,8 +29,11 @@
     "@tanstack/react-query": "^5.90.2",
     "@tanstack/react-table": "^8.21.3",
     "@vercel/analytics": "^1.5.0",
+    "bringid-sdk": "0.0.18",
     "connectkit": "^1.9.0",
     "cva": "1.0.0-beta.1",
+    "ethers": "^6.8.0",
+    "fast-deep-equal": "^3.1.3",
     "framer-motion": "^12.0.6",
     "next": "15.3.8",
     "next-mdx-remote": "^5.0.0",
@@ -38,8 +41,13 @@
     "react": "19.1.2",
     "react-dom": "19.1.2",
     "react-hook-form": "^7.45.1",
+    "react-redux": "^8.1.2",
+    "redux": "^4.2.1",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.4.2",
     "rehype-slug": "^6.0.0",
     "siwe": "^2.3.2",
+    "styled-components": "^6.1.19",
     "ts-pattern": "^5.6.2",
     "viem": "^2.29.1",
     "wagmi": "2.15.2",
@@ -52,6 +60,7 @@
     "@types/node": "^20",
     "@types/react": "19.1.2",
     "@types/react-dom": "19.1.2",
+    "@types/redux-logger": "^3.0.13",
     "eslint-config-next": "15.1.6",
     "eslint-plugin-tailwindcss": "^3.17.4",
     "globals": "^15.12.0",
