--- a/apps/hub/package.json
+++ b/apps/hub/package.json
@@ -29,7 +29,7 @@
     "@tanstack/react-query": "^5.90.2",
     "@tanstack/react-table": "^8.21.3",
     "@vercel/analytics": "^1.5.0",
-    "bringid": "0.4.0-beta-rc.3",
+    "bringid": "0.5.1-beta",
     "connectkit": "^1.9.0",
     "cva": "1.0.0-beta.1",
     "ethers": "^6.8.0",
